--- a/style.css
+++ b/style.css
@@ -10140,8 +10140,9 @@ select {
 }
 
 #splashLogo {
-    max-width: 250px;
-    width: 60vw;
+    max-width: 80vw;
+    max-height: 70vh;
+    width: auto;
     height: auto;
     object-fit: contain;
     opacity: 0;
